--- a/web/src/index.css
+++ b/web/src/index.css
@@ -89,7 +89,12 @@ img.form-logo {
 }
 
 .form-btn-bottom {
-  margin-top: auto; 
+  width: 100%;
+  height: 45px;
+  margin-top: auto;
+  margin-bottom: 0;
+  border: solid 1.5px #DBDBDB;
+  border-radius: 0;
 }
 
 .form-btn-blue {
@@ -127,9 +132,49 @@ img.form-logo {
   height: 40px;
   margin: 13px auto;
   padding: 0 10px;
-  display: block;
+  display: flex;
   color: red;
   font-size: 14px;
+  justify-content: center;
+  align-items: center;
+}
+
+.password-form {
+  width: 350px;
+  height: 520px;
+  display: flex;
+  margin: 25px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  background-color: #fff;
+  border: 1px solid #DBDBDB;
+}
+
+.form-content-icon {
+  margin: 18px auto 6px auto;
+}
+
+.form-content-title {
+  width: 270px;
+  height: 40px;
+  margin: 6px auto 6px auto;
+  padding: 0 10px;
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.form-content-subtitle {
+  width: 270px;
+  height: 60px;
+  margin: 6px auto;
+  padding: 0 10px;
+  display: block;
+  font-size: 14px;
+  color: #8e8e8e;   
+  text-align: center; 
 }
 
 .password-link {
@@ -170,4 +215,15 @@ img.form-logo {
   text-align: center;
   background-color: #fff;
   border: 1px solid #DBDBDB;
+}
+
+.form-expired {
+  margin-left: 275px;
+}
+
+.password-link-text {
+  color : #00366B;
+  align-self: center;
+  font-size: 12px;
+  margin-top: 70px;
 }
