--- a/web/src/components/header/Header.css
+++ b/web/src/components/header/Header.css
@@ -87,7 +87,7 @@ nav {
     border-radius: 5px;
     box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
     z-index: 1000;
-    opacity: 1;
+    opacity: 0.7;
     padding: 0;
 }
 
@@ -106,8 +106,8 @@ nav {
     transition: all 200ms linear;
     box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
 }
-nav-menu-item-list {
-    margin: 30px;
+.nav-menu-item-list {
+    margin: 0px;
     padding: 0px;
 }
 .nav-menu-item {
